# practice/controllers/auth.controller.mjs
@@ -1,8 +1,9 @@
+import { verifyLogin } from '../schemas/login.schema.mjs'
 import { validateUser } from '../schemas/user.mjs'
 
-export class UserController {
-  constructor ({ userModel }) {
-    this.userModel = userModel
+export class AuthController {
+  constructor ({ authModel }) {
+    this.authModel = authModel
   }
 
   create = (req, res) => {
@@ -13,7 +14,7 @@ export class UserController {
       const error = result.error.issues[0].message
       return res.status(422).send({ field, error })
     }
-    const resultCreate = this.userModel.create({ input: result.data })
+    const resultCreate = this.authModel.create({ input: result.data })
 
     if (resultCreate.ok) {
       return res.status(400).json({ message: 'Usuario ya esta registrado' })
@@ -21,8 +22,21 @@ export class UserController {
     return res.status(201).json({ message: 'Usuario creado satifactoriamente', user: resultCreate.user.username })
   }
 
-  get = (req, res) => {
-    const { username } = req.params
-    const user = this.userModel.get({ username })
+  login = (req, res) => {
+    const user = req.body
+    const result = verifyLogin(user)
+    if (!result.success) {
+      const field = result.error.issues[0].path[0]
+      const error = result.error.issues[0].message
+      return res.status(422).send({ field, error })
+    }
+
+    const login = this.authModel.login(result.data)
+
+    if (!login) {
+      return res.status(401).send({ error: 'usuario o contraseña incorrectos' })
+    }
+
+    res.status(200).json(login)
   }
 }
