# practice/routes/auth.route.mjs
@@ -1,11 +1,12 @@
 import { Router } from 'express'
-import { UserController } from '../controllers/auth.controller.mjs'
+import { AuthController } from '../controllers/auth.controller.mjs'
 
-export const createUserRoute = ({ userModel }) => {
-  const userController = new UserController({ userModel })
+export const createUserRoute = ({ authModel }) => {
+  const authController = new AuthController({ authModel })
   const userRoute = Router()
 
-  userRoute.post('/auth/register', userController.create)
+  userRoute.post('/auth/register', authController.create)
+  userRoute.post('/auth/login', authController.login)
   userRoute.get('/user/:username', (req, res) => {
     res.send(req.params)
   })
